--- a/README
+++ b/README
@@ -3,7 +3,7 @@ This is an implementation of the algorithm described in the following paper:
 	A method for object detection based on pixel intensity comparisons,
 	http://arxiv.org/abs/1305.4537
 
-# Invoking the program
+## Invoking the program
 There are four different ways of invoking the program:
 
 1. Run the program without any arguments (this is equivalent to double-clicking the executable file). In this case, the program will attempt to find faces in a video stream obtained from a default webcam attached to the computer. The smallest face that can be detected fits roughly in a 100x100 pixel rectangle.
