--- a/README
+++ b/README
@@ -1,5 +1,4 @@
-Copyright (c) 2013, Nenad Markuš
-All rights reserved.
+
 
 This is an implementation of the algorithm described in the following paper:
 	N. Markus, M. Frljak, I. S. Pandzic, J. Ahlberg and R. Forchheimer,
@@ -23,6 +22,8 @@ There are four ways of invoking the program:
 
 1. Run the program without any arguments (this is equivalent to double-clicking the executable file). In this case, the program will attempt to find faces in a video stream obtained from a default webcam attached to the computer. The smallest face that can be detected fits roughly in a 100x100 pixel rectangle.
 
+	./exe
+
 2. Run the program by passing one integer, [MIN_FACE_SIZE], as a command line argument. The program will attempt to find faces in a video stream obtained from a default webcam attached to the computer. The smallest face that can be detected fits roughly in a [MIN_FACE_SIZE]x[MIN_FACE_SIZE] pixel rectangle.
 
 	./exe 50
@@ -35,8 +36,11 @@ There are four ways of invoking the program:
 
 	./exe 50 /some-folder/input-image.jpg /other-folder/output-image.png
 
-:::::::::::::::::::::
-:: ADDITIONAL INFO ::
-:::::::::::::::::::::
+:::::::::::::
+:: CONTACT ::
+:::::::::::::
 
 For any additional information contact me at nenad.markus@fer.hr
+
+Copyright (c) 2013, Nenad Markuš
+All rights reserved.
