--- a/README
+++ b/README
@@ -1,4 +1,5 @@
-﻿
+n3FaceFinder
+============﻿
 
 This is an implementation of the algorithm described in the following paper:
 	N. Markuš, M. Frljak, I. S. Pandžić, J. Ahlberg and R. Forchheimer,
