--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-n3FaceFinder
-============﻿
+facefinder
+==========﻿
 
 This is an implementation of the algorithm described in the following paper:
 	N. Markuš, M. Frljak, I. S. Pandžić, J. Ahlberg and R. Forchheimer,
