--- a/README
+++ b/README
@@ -1,12 +1,5 @@
-n3FaceFinder
-============﻿
-
-This is an implementation of the algorithm described in the following paper:
-	N. Markuš, M. Frljak, I. S. Pandžić, J. Ahlberg and R. Forchheimer,
-	A method for object detection based on pixel intensity comparisons,
-	http://arxiv.org/abs/1305.4537
-
-More info can be found at http://public.tel.fer.hr/odet/
+facefinder
+==========﻿
 
 :::::::::::::::::::::::::::
 :: COMPILING THE PROGRAM ::
@@ -20,13 +13,11 @@ The program can be compiled on *nix machines by using the provided makefile (som
 
 The program uses OpenCV library to obtain data from webcams and to load/save images in common image formats (*.jpg, *.png, ...). Thus, if you wish to redistribute it or its modifications in binary form, it has to reproduce the OpenCV license (read more at the official web page).
 
-A compiled executable file for windows-based machines can be downloaded from https://hotlab.fer.hr/_download/repository/n3FaceFinder.zip
-
 ::::::::::::::::::::::::::
 :: INVOKING THE PROGRAM ::
 ::::::::::::::::::::::::::
 
-There are four ways of invoking the program:
+There are five ways of invoking the program:
 
 1. Run the program without any arguments (this is equivalent to double-clicking the executable file). In this case, the program will attempt to find faces in a video stream obtained from a default webcam attached to the computer. The smallest face that can be detected fits roughly in a 100x100 pixel rectangle.
 
@@ -36,19 +27,14 @@ There are four ways of invoking the program:
 
 	./exe 50
 
-3. Run the program by passing one integer, [MIN_FACE_SIZE], and path to the input image, [PATH], as command line arguments. The program will attempt to find faces in an image specified by [PATH]. The smallest face that can be detected fits roughly in a [MIN_FACE_SIZE]x[MIN_FACE_SIZE] pixel rectangle. The program writes (to standard output) the number of detections and their positions and scales.
+3. Run the program by passing one integer, [MIN_FACE_SIZE], and a positive real number, [QCUTOFF], as command line arguments. The program will attempt to find faces in a video stream obtained from a default webcam attached to the computer. The smallest face that can be detected fits roughly in a [MIN_FACE_SIZE]x[MIN_FACE_SIZE] pixel rectangle. All detections with estimated quality less than [QCUTOFF] are discarded.
 
-	./exe 50 /some-folder/image.jpg
+	./exe 50 2.0
 
-4. Run the program by passing one integer, [MIN_FACE_SIZE], path to the input image, [PATH1], and path to the output image, [PATH2], as command line arguments. The program will attempt to find faces in the image specified by [PATH1]. The smallest face that can be detected fits roughly in a [MIN_FACE_SIZE]x[MIN_FACE_SIZE] pixel rectangle. The program outputs a new image to [PATH2]. This image is just the one from [PATH1] with obtained detections drawn over it.
+4. Run the program by passing one integer, [MIN_FACE_SIZE], and path to the input image, [PATH], as command line arguments. The program will attempt to find faces in an image specified by [PATH]. The smallest face that can be detected fits roughly in a [MIN_FACE_SIZE]x[MIN_FACE_SIZE] pixel rectangle. The program writes (to standard output) the number of detections and their positions and scales.
 
-	./exe 50 /some-folder/input-image.jpg /other-folder/output-image.png
+	./exe 50 2.0 /some-folder/image.jpg
 
-:::::::::::::
-:: CONTACT ::
-:::::::::::::
+5. Run the program by passing one integer, [MIN_FACE_SIZE], a positive real number, [QCUTOFF], path to the input image, [PATH1], and path to the output image, [PATH2], as command line arguments. The program will attempt to find faces in the image specified by [PATH1]. The smallest face that can be detected fits roughly in a [MIN_FACE_SIZE]x[MIN_FACE_SIZE] pixel rectangle. All detections with estimated quality less than [QCUTOFF] are discarded. The program outputs a new image to [PATH2]. This image is just the one from [PATH1] with obtained detections drawn over it.
 
-For any additional information contact me at nenad.markus@fer.hr
-
-Copyright (c) 2013, Nenad Markuš
-All rights reserved.
+	./exe 50 2.0 /some-folder/input-image.jpg /other-folder/output-image.png
